# ModelPick-AI

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
data/: models.json
modelpick_ai/: __init__.py  __main__.py  cli.py  database.py  detector.py  recommender.py  reporter.py  tui.py
tests/: __init__.py  test_detector.py  test_recommender.py  test_reporter.py
